# ROS

basics/: CMakeLists.txt  package.xml
basics/action/: Timer.action
basics/src/: doubler.py  fancy_action_client.py  fancy_action_server.py  message_publisher.py  message_subscriber.py  service_client.py  service_server.py  simple_action_client.py  simple_action_server.py  topic_publisher.py  topic_subscriber.py
beginner_tutorials/: package.xml
beginner_tutorials/src/: main.py  motors_control.py  object_tracker.py  track_example.py
cl_demo/: CMakeLists.txt  README.md  package.xml
cl_demo/src/: alt_figure_8.py  cmd_vel.bag  figure_8.py
gazebo_ros_demos1/rrbot_description/launch/: rrbot.rviz
gazebo_ros_demos1/rrbot_description/urdf/: rrbot.gazebo
inverse_kinematics/: CMakeLists.txt  package.xml
inverse_kinematics/src/: marker_trail.py
inverse_kinematics/urdf/: my_2r.urdf
inverse_kinematics1/: README.md
inverse_kinematics1/launch/: robot.launch
inverse_kinematics1/rviz/: config.rviz
me495_hw1/: CMakeLists.txt  README.md
me495_hw1/srv/: ME495Srv.srv
me495_hw11/msg/: ME495Pub.msg
me495_hw11/src/: ros_cl_demo.cpp
rrbot_control_me495/: CMakeLists.txt  package.xml
rrbot_control_me495/launch/: README.org  custom_plugin.launch  rrbot_world.launch
rrbot_control_me495/msg/: RRBotConfig.msg
rrbot_control_me495/src/: joint_publisher.py  rrbot_custom_plugin.cpp
rrbot_control_me495/urdf/: rrbot.xacro
rrbot_control_me495/worlds/: my_world.sdf
rrbot_control_me4951/: README.md
rrbot_control_me4951/config/: README.org
rrbot_control_me4951/launch/: rrbot.rviz  rrbot_control.launch
rrbot_control_me4951/screenshots/: README.org
rrbot_control_me4951/src/: joint_effort_to_torque.py
rrbot_control_me4951/urdf/: rrbot.gazebo
rrbot_control_me4951/worlds/: README.org
wanderbot/launch/: keys_to_twist_with_ramps.launch
wanderbot/src/: key_publisher.py  keys_to_twist_with_ramps.py  red_light_green_light.py  wander.py
wanderbot1/: README.md  package.xml
wanderbot1/src/: key_publisher.py  red_light_green_light.py  talker_param.py  wander.py
